--- a/Donor/view/controller/info/InfoViewController.xib
+++ b/Donor/view/controller/info/InfoViewController.xib
@@ -42,6 +42,7 @@
 						<string key="NSFrameSize">{320, 431}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView" ref="833742718"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -56,7 +57,7 @@
 						<string key="NSFrameSize">{320, 55}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="636196234"/>
+						<reference key="NSNextKeyView" ref="587612170"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<int key="IBUIContentMode">5</int>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -69,10 +70,10 @@
 					<object class="IBUIButton" id="636196234">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{10, 10}, {100, 32}}</string>
+						<string key="NSFrame">{{211, 10}, {100, 32}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="207699264"/>
+						<reference key="NSNextKeyView"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -116,7 +117,7 @@
 						<string key="NSFrame">{{110, 10}, {101, 32}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="587612170"/>
+						<reference key="NSNextKeyView" ref="636196234"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<int key="IBUITag">1</int>
@@ -144,9 +145,10 @@
 					<object class="IBUIButton" id="587612170">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{211, 10}, {100, 32}}</string>
+						<string key="NSFrame">{{10, 10}, {100, 32}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView" ref="207699264"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<int key="IBUITag">2</int>
@@ -159,15 +161,15 @@
 							<bytes key="NSRGB">MC4xOTYwNzg0MzQ2IDAuMzA5ODAzOTMyOSAwLjUyMTU2ODY1NgA</bytes>
 						</object>
 						<reference key="IBUINormalTitleShadowColor" ref="242604408"/>
-						<object class="NSCustomResource" key="IBUIHighlightedImage" id="7863135">
-							<string key="NSClassName">NSImage</string>
-							<string key="NSResourceName">infoSegmentButtonNotSelected.png</string>
-						</object>
-						<object class="NSCustomResource" key="IBUISelectedImage">
+						<object class="NSCustomResource" key="IBUIHighlightedImage" id="533223818">
 							<string key="NSClassName">NSImage</string>
 							<string key="NSResourceName">infoSegmentButtonSelected.png</string>
 						</object>
-						<reference key="IBUINormalImage" ref="7863135"/>
+						<reference key="IBUISelectedImage" ref="533223818"/>
+						<object class="NSCustomResource" key="IBUINormalImage">
+							<string key="NSClassName">NSImage</string>
+							<string key="NSResourceName">infoSegmentButtonNotSelected.png</string>
+						</object>
 						<reference key="IBUIFontDescription" ref="309346460"/>
 						<reference key="IBUIFont" ref="171826547"/>
 					</object>
